Fix spacing for project list

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -34,6 +34,7 @@ body {
   border-style: solid;
   border-width: medium;
   border-color: black;
+  padding: 1%;
 }
 
 .top-image-margin {
